src/test/deca/context/valid/inheritance/override_return_subtype_ok.deca
// Description :
//    Redéfinition avec type de retour sous-type.
//
// Resultats :
//    OK

class A {
    A f() {
        return this;
    }
}

class B extends A {
    B f() {
        return this;
    }
}

{
}

