src/test/deca/context/invalid/inheritance/override_wrong_return_not_subtype.deca
// Description :
//    Redéfinition d'une méthode avec un type de retour non sous-type.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : Signature pas convenable en override avec la super classe

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    float f() {
        return 1.0;
    }
}

{
}

